Fix: scroll btn overlap on emoji tray

--- a/src/pages/Chat/styles/main.css
+++ b/src/pages/Chat/styles/main.css
@@ -278,6 +278,7 @@
     bottom: 80px;
     width: 42px;
     height: 42px;
+    z-index: -1;
     border-radius: 50%;
     color: rgb(145, 145, 145);
     display: flex;
@@ -297,6 +298,7 @@
     height: 0;
     min-height: 0;
     transition: all 0.4s ease;
+    background: inherit;
 }
 
 .emojis__wrapper--active {
